# django-api-test

./: pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-install.sh
demo/: api.py  settings.py  urls.py
my_app/: api.py  artikel.http  auth.py  schema.py
tests/: settings.py
