[tool.poetry]
name = "django-ninja-template"
version = "1.0.0"
description = "Project template for Django Ninja app, using Poetry."
license = "MIT"
authors = ["kilrogg <richter.benjamin@gmail.com>"]
maintainers = ["kilrogg <richter.benjamin@gmail.com>"]
readme = "README.md"
#homepage = "https://github.com/yunojuno/poetry-template"
#repository = "https://github.com/yunojuno/poetry-template"
#documentation = "https://github.com/yunojuno/poetry-template"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "my_app" }]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2 || ^5.0"
django-ninja = "^1.0"
django-microsoft-auth = "^3.0.1"
django-extensions = "^3.2.3"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
freezegun = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
ruff = "*"
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
